--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "blueimp-load-image": "^2.22.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "firebase-tools": "^7.1.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
