--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "core-js": "^2.6.5",
     "firebase": "^6.1.0",
+    "firebase-functions": "^3.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
@@ -23,8 +24,13 @@
     "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
     "blueimp-load-image": "^2.22.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "firebase-tools": "^7.1.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
