--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: npm install
-          command: npm i
+          name: npm ci
+          command: npm ci
       - run:
           name: build
-          command: npm run build
+          command: npm run generate
       - run:
           name: deploy to Firebase Hosting
           command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --project=$FIREBASE_PJ
@@ -19,7 +19,7 @@ workflows:
   version: 2
   deploy_dev:
     jobs:
-      - deploy_dev: 
+      - deploy_dev:
           filters:
             branches:
-              only: master 
+              only: master
