--- a/functions/package.json
+++ b/functions/package.json
@@ -21,9 +21,12 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "eslint-plugin-prettier": "^3.3.1",
+    "firebase-functions-test": "^0.2.0",
+    "prettier": "^2.2.1",
+    "typescript": "^3.8.0"
   },
   "private": true
 }
