[wip] update: cloud functionsの関数を分割

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,45 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "outDir": "lib",
+    "target": "ES2018",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "lib": [
+      "ESNext",
+      "ESNext.AsyncIterable",
+      "DOM"
+    ],
+    "esModuleInterop": true,
+    "allowJs": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "noEmit": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+
+    // 頑張らないTSの設定
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+
+    "paths": {
+      "~/*": [
+        "./*"
+      ],
+      "@/*": [
+        "./*"
+      ]
+    },
+    "types": [
+      "@types/node",
+      "@nuxt/types"
+    ]
   },
-  "compileOnSave": true,
-  "include": [
-    "src"
+  "exclude": [
+    "node_modules",
+    ".nuxt",
+    "dist"
   ]
 }
