--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.2",
     "firebase": "^8.2.1",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-rehype": "^8.0.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
