--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,10 @@
 
     "paths": {
       "~/*": [
-        "./*"
+        "./app/*"
       ],
       "@/*": [
-        "./*"
+        "./app/*"
       ]
     },
     "types": [
