--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint \"src/**/*\"",
-    "build": "tsc",
+    "build": "./node_modules/.bin/tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -10,10 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "child-process-promise": "^2.2.1",
+    "dayjs": "^1.10.3",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
