--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
-    "remark-rehype": "^8.0.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
