--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "blueimp-load-image": "^5.14.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.2",
+    "deepmerge": "^4.2.2",
     "firebase": "^8.2.1",
+    "hast-util-sanitize": "^3.0.2",
     "nuxt": "^2.14.6",
+    "rehype": "^11.0.0",
+    "rehype-sanitize": "^4.0.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
