--- a/functions/package.json
+++ b/functions/package.json
@@ -16,8 +16,12 @@
   "dependencies": {
     "child-process-promise": "^2.2.1",
     "dayjs": "^1.10.3",
+    "deepmerge": "^4.2.2",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "hast-util-sanitize": "^3.0.2",
+    "rehype": "^11.0.0",
+    "rehype-sanitize": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
