--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -15,6 +15,10 @@
     "strictBindCallApply": false,
     "strictPropertyInitialization": false,
     "noImplicitThis": false,
+
+    // NOTE: 下記エラーに対応
+    // This module is declared with using 'export =', and can only be used with a default import when using the 'esModuleInterop' flag.
+    "esModuleInterop": true
   },
   "compileOnSave": true,
   "include": [
