update: staging環境の構築

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,22 @@
 version: 2
 jobs:
-  deploy_dev:
+  deploy_sta:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - run:
+          name: npm ci
+          command: npm ci && cd functions && npm ci
+      - run:
+          name: build
+          command: npm run generate:sta && cd functions && npm run build
+      - run:
+          name: deploy to Firebase Hosting
+          # devDependenciesに firebase-tools が必須 npm i -D firebase-tools
+          command: ./node_modules/.bin/firebase deploy --token=$STAGING_FIREBASE_TOKEN --project=$STAGING_FIREBASE_PJ
+
+  deploy_prod:
     docker:
       - image: circleci/node:10
     steps:
@@ -18,9 +34,15 @@ jobs:
 
 workflows:
   version: 2
-  deploy_dev:
+  deploy_sta:
     jobs:
-      - deploy_dev:
+      - deploy_sta:
+          filters:
+            branches:
+              only: develop
+  deploy_prod:
+    jobs:
+      - deploy_prod:
           filters:
             branches:
               only: master
