--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
-    "test": "jest"
+    "test": "jest",
+    "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
+    "deploy:prod": "npm run generate:prod && firebase deploy --only hosting --project=prod"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
