--- a/functions/package.json
+++ b/functions/package.json
@@ -17,11 +17,10 @@
     "child-process-promise": "^2.2.1",
     "dayjs": "^1.10.4",
     "deepmerge": "^4.2.2",
+    "exif-reader": "^1.0.3",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.1",
-    "hast-util-sanitize": "^3.0.2",
-    "rehype": "^11.0.0",
-    "rehype-sanitize": "^4.0.0"
+    "sharp": "^0.27.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
