--- a/functions/package.json
+++ b/functions/package.json
@@ -16,10 +16,9 @@
   "dependencies": {
     "child-process-promise": "^2.2.1",
     "dayjs": "^1.10.4",
-    "exif-reader": "^1.0.3",
+    "exifr": "^6.0.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.1",
-    "sharp": "^0.27.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
