--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.2",
     "firebase": "^8.2.1",
+    "lodash.debounce": "^4.0.8",
     "nuxt": "^2.14.6",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
