--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "dayjs": "^1.10.4",
     "exifr": "^6.0.0",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.13.1"
+    "firebase-functions": "^3.13.1",
+    "image-size": "^0.9.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
