--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "child-process-promise": "^2.2.1",
     "dayjs": "^1.10.4",
     "exifr": "^6.0.0",
