--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,9 +70,21 @@ workflows:
           filters:
             branches:
               only: develop
+  deploy_sta_hosting:
+    jobs:
+      - deploy_sta_hosting:
+          filters:
+            branches:
+              only: develop
   deploy_prod:
     jobs:
       - deploy_prod:
+          filters:
+            branches:
+              only: master
+  deploy_prod_hosting:
+    jobs:
+      - deploy_prod_hosting:
           filters:
             branches:
               only: master
