--- a/firebase.json
+++ b/firebase.json
@@ -19,7 +19,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=60"
+            "value": "public,max-age=86400,s-maxage=2592000"
           }
         ]
       },
@@ -28,7 +28,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=86400"
+            "value": "public,max-age=86400,s-maxage=2592000"
           }
         ]
       }
