--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,7 @@
   },
   "hosting": {
     "public": "dist",
+    "trailingSlash": false,
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
       {
