--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.2",
     "firebase": "^8.2.1",
+    "hast-util-sanitize": "^3.0.2",
+    "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
     "nuxt": "^2.14.6",
     "remark": "^13.0.0",
+    "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-preset-lint-recommended": "^5.0.0",
     "uuid": "^8.3.2"
