--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "~/*": ["./app/*"],
       "@/*": ["./app/*"]
     },
-    "types": ["@types/node", "@nuxt/types"]
+    "types": ["@types/node", "@nuxt/types", "@types/jest"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
