--- a/firebase.json
+++ b/firebase.json
@@ -16,20 +16,29 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
       {
-        "source": "**/*",
+        "source": "**/*.html",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public,max-age=10,s-maxage=2592000"
+            "value": "private, no-store, no-cache"
           }
         ]
       },
+      {
+        "source": "**/*.@(js|css)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=86400"
+          }
+        ]
+      }
       {
         "source": "**/*.@(jpg|jpeg|gif|png)",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public,max-age=10,s-maxage=2592000"
+            "value": "public, maxage=31536000"
           }
         ]
       }
