--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
       {
-        "source": "**/index.html",
+        "source": "index.html",
         "headers": [
           {
             "key": "Cache-Control",
@@ -29,7 +29,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=86400"
+            "value": "public, max-age=31536000"
           }
         ]
       },
