--- a/firebase.json
+++ b/firebase.json
@@ -20,7 +20,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "private, no-store, no-cache, must-revalidate"
+            "value": "max-age=0"
           }
         ]
       },
