--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
       {
-        "source": "index.html",
+        "source": "/**",
         "headers": [
           {
             "key": "Cache-Control",
@@ -25,20 +25,11 @@
         ]
       },
       {
-        "source": "**/*.@(js|css)",
+        "source": "**/*.@(js|css|jpg|jpeg|gif|png)",
         "headers": [
           {
             "key": "Cache-Control",
             "value": "public, max-age=31536000"
-          }
-        ]
-      },
-      {
-        "source": "**/*.@(jpg|jpeg|gif|png)",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public, maxage=31536000"
           }
         ]
       }
