--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "portfolio-nuxt-ts",
+  "name": "portfolio",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=\"staging\" nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt-ts generate",
-    "generate:prod": "cross-env NODE_ENV=\"production\" nuxt-ts generate",
+    "dev": "cross-env NODE_ENV=\"staging\" nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt generate",
+    "generate:prod": "cross-env NODE_ENV=\"production\" nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
@@ -20,7 +20,6 @@
     "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^2.0.0",
     "blueimp-load-image": "^5.14.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
@@ -29,7 +28,7 @@
     "hast-util-sanitize": "^3.0.2",
     "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
-    "nuxt": "^2.14.6",
+    "nuxt": "^2.15.8",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
