--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start": "nuxt start",
     "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt generate",
     "generate:prod": "cross-env NODE_ENV=\"production\" nuxt generate",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lint": "npm run lint:js && npm run lint:style",
     "test:sta": "cross-env NODE_ENV=\"staging\" jest",
     "test:prod": "cross-env NODE_ENV=\"production\" jest",
     "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
@@ -38,27 +37,18 @@
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
     "@nuxt/typescript-build": "^2.0.3",
-    "@nuxtjs/eslint-config": "^3.1.0",
-    "@nuxtjs/eslint-config-typescript": "^3.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/stylelint-module": "^4.0.0",
+    "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "fibers": "^5.0.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^3.1.0",
     "firebase-tools": "^9.2.0",
     "jest": "^26.5.0",
     "prettier": "^2.1.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
   }
