--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:sta": "cross-env NODE_ENV=\"staging\" jest",
     "test:prod": "cross-env NODE_ENV=\"production\" jest",
     "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
-    "deploy:prod": "npm run generate:prod && firebase deploy --only hosting --project=prod"
+    "deploy:prod": "npm run generate:prod && firebase deploy --only hosting --project=prod",
+    "typecheck": "tsc --noEmit -p tsconfig.json"
   },
   "jest": {
     "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
@@ -28,6 +29,7 @@
     "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
     "nuxt": "^2.15.8",
+    "nuxt-typed-vuex": "^0.2.0",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
@@ -35,9 +37,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.6",
+    "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
+    "@nuxtjs/stylelint-module": "^4.1.0",
+    "@types/jest": "^27.4.0",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/uuid": "^8.3.4",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.5.0",
@@ -49,7 +55,8 @@
     "prettier": "^2.1.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "ts-jest": "^26.4.1",
+    "stylelint": "^14.5.0",
+    "ts-jest": "^26.5.6",
     "vue-jest": "^3.0.4"
   }
 }
