--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.0.3",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@types/jest": "^27.4.0",
@@ -47,6 +48,7 @@
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.5.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
@@ -55,7 +57,6 @@
     "prettier": "^2.1.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "stylelint": "^14.5.0",
     "ts-jest": "^26.5.6",
     "vue-jest": "^3.0.4"
   }
