--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
 jobs:
   deploy_sta:
     docker:
-      - image: circleci/node:12
+      - image: cimg/node:16.13.0
     steps:
       - checkout
       - install-modules
@@ -41,7 +41,7 @@ jobs:
 
   deploy_sta_hosting:
     docker:
-      - image: circleci/node:12
+      - image: cimg/node:16.13.0
     steps:
       - checkout
       - install-modules
@@ -55,7 +55,7 @@ jobs:
 
   deploy_prod:
     docker:
-      - image: circleci/node:12
+      - image: cimg/node:16.13.0
     steps:
       - checkout
       - run:
@@ -71,7 +71,7 @@ jobs:
 
   deploy_prod_hosting:
     docker:
-      - image: circleci/node:12
+      - image: cimg/node:16.13.0
     steps:
       - checkout
       - run:
