--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint \"src/**/*\"",
-    "build": "./node_modules/.bin/tsc",
+    "build": "tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -31,7 +31,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "firebase-functions-test": "^0.2.0",
     "prettier": "^2.2.1",
-    "typescript": "^3.8.0"
+    "typescript": "^4.5.5"
   },
   "private": true
 }
