--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=\"staging\" nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt generate",
-    "generate:prod": "cross-env NODE_ENV=\"production\" nuxt generate",
+    "dev": "cross-env NODE_ENV=\"staging\" nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi preview",
+    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxi generate",
+    "generate:prod": "cross-env NODE_ENV=\"production\" nuxi generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "test:sta": "cross-env NODE_ENV=\"staging\" jest",
@@ -24,11 +24,11 @@
     "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.2",
-    "firebase": "^8.2.1",
+    "firebase": "^8.10.1",
     "hast-util-sanitize": "^3.0.2",
     "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
-    "nuxt": "^2.15.8",
+    "nuxt-edge": "latest",
     "nuxt-typed-vuex": "^0.2.0",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
@@ -37,8 +37,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27439932.78761c2",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
@@ -57,6 +57,7 @@
     "prettier": "^2.1.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
+    "std-env": "^3.0.1",
     "ts-jest": "^26.5.6",
     "vue-jest": "^3.0.4"
   }
