--- a/app/.env.production
+++ b/app/.env.production
@@ -6,4 +6,4 @@ MESSAGING_SENDER_ID=631852417771
 APP_ID=1:631852417771:web:46ff2edb9660c9906534ae
 MEASUREMENT_ID=G-YGDY0HJSYV
 AUTHOR_ID=y6VxBfC6TPPWTRvV5siYr1wzfBx2
-APP_URL=https://konkarin-photo.web.app/
+APP_URL=https://konkarin.photo
