--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=\"staging\" nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt generate",
-    "generate:prod": "cross-env NODE_ENV=\"production\" nuxt generate",
+    "dev": " nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi start",
+    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxi generate",
+    "generate:prod": "cross-env NODE_ENV=\"production\" nuxi generate",
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "test:sta": "cross-env NODE_ENV=\"staging\" jest",
@@ -20,26 +20,30 @@
     "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
   },
   "dependencies": {
+    "@nuxt/devalue": "^2.0.0",
     "blueimp-load-image": "^5.14.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.2",
+    "dotenv": "^16.0.1",
     "firebase": "^9.6.8",
     "hast-util-sanitize": "^3.0.2",
     "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
-    "nuxt": "^2.15.8",
+    "nuxt-edge": "latest",
     "nuxt-typed-vuex": "^0.2.0",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-preset-lint-recommended": "^5.0.0",
+    "std-env": "^3.1.1",
+    "ufo": "^0.8.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27657000.c87fdbe",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.0.3",
-    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@types/jest": "^27.4.0",
@@ -48,7 +52,6 @@
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.5.0",
-    "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
