--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "nuxt start",
     "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt generate",
     "generate:prod": "cross-env NODE_ENV=\"production\" nuxt generate",
-    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .ts,.js,.vue .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue . && prettier --write './**/*.{js,vue,ts}'",
     "test:sta": "cross-env NODE_ENV=\"staging\" jest",
     "test:prod": "cross-env NODE_ENV=\"production\" jest",
     "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
