--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@types/jest": "^27.4.0",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/node": "^18.11.18",
     "@types/uuid": "^8.3.4",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
