--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "hast-util-sanitize": "^3.0.2",
     "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
-    "nuxt": "^2.15.8",
+    "nuxt": "^2.16.3",
     "nuxt-typed-vuex": "^0.2.0",
+    "postcss": "^8.4.21",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
