feat: 🎸 add nuxt bridge

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=\"staging\" nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate:sta": "cross-env NODE_ENV=\"staging\" nuxt generate",
-    "generate:prod": "cross-env NODE_ENV=\"production\" nuxt generate",
+    "dev": "cross-env NODE_ENV=\"development\" nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi start",
+    "generate:sta": "cross-env NODE_ENV=\"development\" nuxi generate",
+    "generate:prod": "cross-env NODE_ENV=\"production\" nuxi generate",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lintfix": "eslint --fix --ext .ts,.js,.vue . && prettier --write './**/*.{js,vue,ts}'",
-    "test:sta": "cross-env NODE_ENV=\"staging\" jest",
+    "test:sta": "cross-env NODE_ENV=\"development\" jest",
     "test:prod": "cross-env NODE_ENV=\"production\" jest",
     "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
     "deploy:prod": "npm run generate:prod && firebase deploy --only hosting --project=prod",
@@ -39,8 +39,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.0.3",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27998567.a12a710",
+    "@nuxt/types": "^2.16.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
