chore: 🤖 update npm scripts

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=\"development\" nuxi dev",
+    "dev": "nuxi dev --dotenv .env.staging",
     "build": "nuxi build",
     "start": "nuxi start",
-    "generate:sta": "cross-env NODE_ENV=\"development\" nuxi generate",
-    "generate:prod": "cross-env NODE_ENV=\"production\" nuxi generate",
+    "generate:sta": "nuxi generate  --dotenv .env.staging",
+    "generate:prod": "nuxi generate  --dotenv .env.production",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lintfix": "eslint --fix --ext .ts,.js,.vue . && prettier --write './**/*.{js,vue,ts}'",
-    "test:sta": "cross-env NODE_ENV=\"development\" jest",
+    "test:sta": "cross-env NODE_ENV=\"staging\" jest",
     "test:prod": "cross-env NODE_ENV=\"production\" jest",
     "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
     "deploy:prod": "npm run generate:prod && firebase deploy --only hosting --project=prod",
