fix: 🐛 revert dotenv name

--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev --dotenv .env.staging",
+    "dev": "nuxi dev --dotenv .env.development",
     "build": "nuxi build",
     "start": "nuxi start",
-    "generate:sta": "nuxi generate  --dotenv .env.staging",
+    "generate:sta": "nuxi generate  --dotenv .env.development",
     "generate:prod": "nuxi generate  --dotenv .env.production",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lintfix": "eslint --fix --ext .ts,.js,.vue . && prettier --write './**/*.{js,vue,ts}'",
-    "test:sta": "cross-env NODE_ENV=\"staging\" jest",
+    "test:sta": "cross-env NODE_ENV=\"development\" jest",
     "test:prod": "cross-env NODE_ENV=\"production\" jest",
     "deploy:sta": "npm run generate:sta && firebase deploy --only hosting --project=sta",
     "deploy:prod": "npm run generate:prod && firebase deploy --only hosting --project=prod",
     "typecheck": "tsc --noEmit -p tsconfig.json"
-  },
-  "jest": {
-    "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
   },
   "dependencies": {
     "blueimp-load-image": "^5.14.0",
