--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-preset-lint-recommended": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -47,17 +49,18 @@
     "@types/uuid": "^8.3.4",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^26.5.0",
+    "babel-jest": "^29.5.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "firebase-tools": "^9.2.0",
-    "jest": "^26.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.1.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^29.1.0",
     "vue-jest": "^3.0.4"
   }
 }
