fix: 🐛 hosting target dir

--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "dist",
+    "public": ".output",
     "trailingSlash": false,
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
