--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,19 @@
 version: 2.1
 commands:
+  set-env:
+    steps:
+      - run:
+          name: set env
+          command: |
+            TARGET_ENV=""
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              TARGET_ENV="production"
+            fi
+            echo "export TARGET_ENV=${TARGET_ENV}" >> $BASH_ENV
+  switch-env:
+    description: 'switch env by branch'
+    steps:
+      - run: sed -i -e "s/{{TARGET_ENV}}/${TARGET_ENV}/g" config.ts
   install-modules:
     description: 'install node_modules'
     steps:
@@ -26,13 +40,15 @@ jobs:
       - image: cimg/node:16.13.0
     steps:
       - checkout
+      - set-env
+      - switch-env
       - install-modules
       - run:
           name: build
-          command: npm run generate:sta
+          command: npm run generate
       - run:
           name: test
-          command: npm run test:sta
+          command: npm run test
       - build-functions
       - run:
           name: deploy to Firebase
@@ -47,7 +63,7 @@ jobs:
       - install-modules
       - run:
           name: build
-          command: npm run generate:sta
+          command: npm run generate
       - run:
           name: deploy to Firebase Hosting
           # devDependenciesに firebase-tools が必須 npm i -D firebase-tools
@@ -63,7 +79,7 @@ jobs:
           command: npm ci && cd functions && npm ci
       - run:
           name: build
-          command: npm run generate:prod && cd functions && npm run build
+          command: npm run generate && cd functions && npm run build
       - run:
           name: deploy to Firebase Hosting
           # devDependenciesに firebase-tools が必須 npm i -D firebase-tools
@@ -79,7 +95,7 @@ jobs:
           command: npm ci
       - run:
           name: build
-          command: npm run generate:prod
+          command: npm run generate
       - run:
           name: deploy to Firebase Hosting
           # devDependenciesに firebase-tools が必須 npm i -D firebase-tools
