chore: 🤖 update eslint for vue3

--- a/.eslintignore
+++ b/.eslintignore
@@ -4,10 +4,8 @@ node_modules
 # logs
 npm-debug.log
 
-# Nuxt build
+# Nuxt
 .nuxt
-
-# Nuxt generate
 .output
 
 # vscode
@@ -19,6 +17,6 @@ npm-debug.log
 # static
 static
 
-# functions
+# functions配下は別途lint設定あり
 functions
 
