--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "nuxi build",
     "start": "nuxi start",
     "generate": "nuxi generate",
-    "lint": "eslint --ext .ts,.js,.vue .",
+    "lint": "eslint . --ext .ts,.js,.vue --fix",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lintfix": "eslint --fix --ext .ts,.js,.vue . && prettier --write './**/*.{js,vue,ts}'",
     "test": "jest",
     "deploy:sta": "npm run generate && firebase deploy --only hosting --project=sta",
     "deploy:prod": "npm run generate && firebase deploy --only hosting --project=prod",
@@ -39,23 +38,24 @@
     "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27998567.a12a710",
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@types/jest": "^27.4.0",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^18.11.18",
     "@types/uuid": "^8.3.4",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.5.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "firebase-tools": "^9.2.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.8.8",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "ts-jest": "^29.1.0",
