chore: 🤖 nuxiをやめてnuxtコマンドを使う

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "nuxi start",
-    "generate": "nuxi generate",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "start": "nuxt preview",
+    "generate": "nuxt generate",
     "lint": "eslint . --ext .ts,.js,.vue --fix",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "test": "jest",
