fix: 🐛 remove comma

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "test": "jest",
     "deploy:sta": "npm run generate && firebase deploy --only hosting --project=staging-konkarin-photo",
-    "deploy:prod": "npm run generate && firebase deploy --only hosting --project=konkarin-photo",
+    "deploy:prod": "npm run generate && firebase deploy --only hosting --project=konkarin-photo"
   },
   "dependencies": {
     "blueimp-load-image": "^5.14.0",
