fix: 🐛 storage access in node 20
https://github.com/googleapis/nodejs-storage/issues/2368#issuecomment-1914372497

--- a/functions/package.json
+++ b/functions/package.json
@@ -32,5 +32,8 @@
     "prettier": "^2.2.1",
     "typescript": "^4.5.5"
   },
+  "overrides": {
+    "stream-shift": "1.0.2"
+  },
   "private": true
 }
