--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -9,7 +10,7 @@
     "generate": "nuxt generate",
     "lint": "eslint . --ext .ts,.js,.vue --fix",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "test": "jest",
+    "test": "vitest",
     "deploy:sta": "npm run generate && firebase deploy --only hosting --project=staging-konkarin-photo",
     "deploy:prod": "npm run generate && firebase deploy --only hosting --project=konkarin-photo",
     "typecheck": "tsc --noEmit",
@@ -34,26 +35,22 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jest": "^29.5.10",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^18.11.18",
     "@types/uuid": "^8.3.4",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.6",
-    "@vue/vue3-jest": "^29.2.6",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.17.0",
     "firebase-tools": "^12.4.8",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "happy-dom": "^14.12.3",
     "nuxt": "^3.13.0",
     "prettier": "^2.8.8",
-    "sass": "^1.32.5",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.4.5",
+    "unplugin-auto-import": "^0.18.2",
+    "vitest": "^2.0.5",
     "vue-tsc": "^2.0.21"
   }
 }
