fix: 🐛 記事見出しのテキストをプレーンテキストにする

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "firebase": "^9.23.0",
     "highlight.js": "^11.1.1",
     "lodash.debounce": "^4.0.8",
+    "mdast-util-from-markdown": "^2.0.2",
+    "mdast-util-to-string": "^4.0.0",
     "postcss": "^8.4.21",
     "rehype-highlight": "^7.0.1",
     "rehype-stringify": "^10.0.1",
