--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "vue-type": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@tiptap/extension-highlight": "^3.0.7",
+    "@tiptap/extension-typography": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
+    "@tiptap/static-renderer": "^3.0.7",
+    "@tiptap/vue-3": "^3.0.7",
     "blueimp-load-image": "^5.14.0",
     "dayjs": "^1.10.2",
     "firebase": "^9.23.0",
@@ -27,13 +32,17 @@
     "mdast-util-to-string": "^4.0.0",
     "postcss": "^8.4.21",
     "rehype-highlight": "^7.0.1",
+    "rehype-parse": "^9.0.1",
+    "rehype-remark": "^10.0.1",
     "rehype-stringify": "^10.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
+    "remark-stringify": "^11.0.0",
     "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "uuid": "^8.3.2",
     "vue": "^3.5.12"
   },
